Fixed explore descriptions on mobile

--- a/app/assets/stylesheets/pages/_archive.scss
+++ b/app/assets/stylesheets/pages/_archive.scss
@@ -188,6 +188,7 @@
   .archive-description {
     font-size: 1rem;
     margin: 0;
+    width: 100%;
   }
 
   #archive-hero {
